# churn-sentinel

./: .gitignore  PROJECT_PLAN.md  README.md  eda_initial.py  main.py  pyproject.toml
.github/: pull_request_template.md
docs/: architecture.md
docs/adr/: 001-evaluation-metric.md  002-use-uv.md  003-model-promotion.md  template.md
src/churn_sentinel/config/: settings.py
src/churn_sentinel/data/: cleaning.py  features.py
tests/unit/: test_cleaning.py  test_feature.py
