[project]
name = "churn-sentinel"
version = "0.1.0"
description = "End-to-end ML pipeline for customer churn prediction — training, API, and deployment."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "mlflow>=2.11",
    "joblib>=1.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",     # for testing FastAPI endpoints
    "ruff>=0.4",         # lint + format
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
